--- a/frontend/Kontakt/Sponsorer.html
+++ b/frontend/Kontakt/Sponsorer.html
@@ -1,6 +1,6 @@
 <div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;">
         <h1 style="margin:0 0 10px 0;font-size:28px;line-height:1.2;color:#005a99;">Våra sponsorer</h1>
         <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:15px;max-width:65ch;">Ett stort tack till våra sponsorer och samarbetspartners som gör det möjligt för oss att utveckla simningen i Ljungby.</p>
@@ -37,8 +37,10 @@
 
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;text-align:center;">
         <p style="margin:0 0 14px 0;color:#2f4c61;line-height:1.6;font-size:14px;">Vill du stötta vår verksamhet och bli en del av nätverket runt föreningen?</p>
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">Bli sponsor</a>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" target="_blank" rel="noopener noreferrer">Bli sponsor</a>
       </section>
     </div>
   </div>
 </div>
+
+
