--- a/frontend/Kontakt/Styrelsen.html
+++ b/frontend/Kontakt/Styrelsen.html
@@ -1,6 +1,6 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:980px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <section style="border-radius:20px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);box-shadow:0 8px 22px rgba(12,68,117,0.14);padding:28px;margin-bottom:18px;color:#ffffff;">
         <p style="margin:0 0 8px 0;font-size:13px;font-weight:700;letter-spacing:0.06em;text-transform:uppercase;color:rgba(255,255,255,0.9);">Ljungby Simsällskap</p>
         <h1 style="margin:0;font-size:30px;line-height:1.2;letter-spacing:-0.3px;">Styrelsen</h1>
@@ -16,11 +16,11 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;font-size:22px;line-height:1.3;">Kontakt till styrelsen</h2>
         <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Du kan kontakta rätt person direkt via telefon eller e-post i respektive kort nedan.</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="mailto:info@ljungbyss.se" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">Allmän kontakt: info@ljungbyss.se</a>
+          <span style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">Allmän kontakt: info@ljungbyss.se</span>
         </div>
       </section>
 
-      <section style="display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:14px;">
+      <section style="display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:14px;">
         <article style="background:#fff;border:1px solid rgba(0,90,153,0.14);border-radius:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
           <img src="https://cdn.sportadmin.se/699/h/253/3e64ae71baa068402026b3c27d9bc699d4a47933cd205047c9f0b88a0905c059_L.jpg" alt="Ulrika Bondeson Crene" style="width:100%;height:300px;object-fit:cover;object-position:center 28%;border-radius:12px;border:1px solid #dce9f5;">
           <h3 style="margin:12px 0 2px 0;color:#005a99;font-size:20px;line-height:1.25;">Ulrika Bondeson Crene</h3>
@@ -28,12 +28,12 @@
           <p style="margin:10px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Uppdrag:</strong> Simskole-, vuxensim- och lägeransvarig.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Vem är du?</strong> 56 år, engagerad föreningsmänniska i Ljungby. Har lång koppling till LSS via familjen och är även utbildad simidrottsledare och tävlingsfunktionär.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Varför engagerar du dig?</strong> Engagemanget började som simförälder och har vuxit sedan första styrelseuppdraget 2015.</p>
-          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><a href="tel:0702492214" style="color:#0077c8;text-decoration:none;font-weight:700;">070-249 22 14</a> · <a href="mailto:ulrika.bondeson.ubc@gmail.com" style="color:#0077c8;text-decoration:none;font-weight:700;">ulrika.bondeson.ubc@gmail.com</a></p>
+          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><span style="color:#0077c8;text-decoration:none;font-weight:700;">070-249 22 14</span> · <span style="color:#0077c8;text-decoration:none;font-weight:700;">ulrika.bondeson.ubc@gmail.com</span></p>
         </article>
 
         <article style="background:#fff;border:1px solid rgba(0,90,153,0.14);border-radius:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
           <div style="width:100%;height:300px;border-radius:12px;border:1px solid #dce9f5;background:linear-gradient(135deg,#eaf5ff 0%,#f8fbff 100%);display:flex;align-items:center;justify-content:center;">
-            <div aria-hidden="true" style="display:flex;flex-direction:column;align-items:center;justify-content:center;color:#6f7782;">
+            <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;color:#6f7782;">
               <div style="width:36px;height:36px;border-radius:50%;background:#6f7782;"></div>
               <div style="width:96px;height:54px;border-radius:54px 54px 12px 12px;background:#6f7782;margin-top:10px;"></div>
             </div>
@@ -43,7 +43,7 @@
           <p style="margin:10px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Uppdrag:</strong> Kassör, sponsring och vice ordförande.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Vem är du?</strong> Information kommer.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Varför engagerar du dig?</strong> Information kommer.</p>
-          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><a href="tel:0706082130" style="color:#0077c8;text-decoration:none;font-weight:700;">070-608 21 30</a> · <a href="mailto:faktura@ljungbyss.se" style="color:#0077c8;text-decoration:none;font-weight:700;">faktura@ljungbyss.se</a></p>
+          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><span style="color:#0077c8;text-decoration:none;font-weight:700;">070-608 21 30</span> · <span style="color:#0077c8;text-decoration:none;font-weight:700;">faktura@ljungbyss.se</span></p>
         </article>
 
         <article style="background:#fff;border:1px solid rgba(0,90,153,0.14);border-radius:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
@@ -53,12 +53,12 @@
           <p style="margin:10px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Uppdrag:</strong> Sekreterare samt arbete i simskolekommittén och vuxenträning.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Vem är du?</strong> 23 år, studerar till grundlärare fritidshem vid Linnéuniversitetet i Växjö. Engagerad i familj, vänner och föreningslivet.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Varför engagerar du dig?</strong> Har varit aktiv simmare i klubben sedan ung ålder och vill bidra till utveckling och stöd i föreningen.</p>
-          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><a href="tel:0722150205" style="color:#0077c8;text-decoration:none;font-weight:700;">072-215 02 05</a> · <a href="mailto:bellabus020514@gmail.com" style="color:#0077c8;text-decoration:none;font-weight:700;">bellabus020514@gmail.com</a></p>
+          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><span style="color:#0077c8;text-decoration:none;font-weight:700;">072-215 02 05</span> · <span style="color:#0077c8;text-decoration:none;font-weight:700;">bellabus020514@gmail.com</span></p>
         </article>
 
         <article style="background:#fff;border:1px solid rgba(0,90,153,0.14);border-radius:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
           <div style="width:100%;height:300px;border-radius:12px;border:1px solid #dce9f5;background:linear-gradient(135deg,#eaf5ff 0%,#f8fbff 100%);display:flex;align-items:center;justify-content:center;">
-            <div aria-hidden="true" style="display:flex;flex-direction:column;align-items:center;justify-content:center;color:#6f7782;">
+            <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;color:#6f7782;">
               <div style="width:36px;height:36px;border-radius:50%;background:#6f7782;"></div>
               <div style="width:96px;height:54px;border-radius:54px 54px 12px 12px;background:#6f7782;margin-top:10px;"></div>
             </div>
@@ -68,7 +68,7 @@
           <p style="margin:10px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Uppdrag:</strong> Tävlingsansvarig.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Vem är du?</strong> Född och uppvuxen i Ljungby. Kom i kontakt med simningen efter flera år i Kina.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Varför engagerar du dig?</strong> Engagerar sig i föreningar och hjälper till där det behövs. “Ingen kan göra allt men alla kan göra lite.”</p>
-          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><a href="tel:0706231358" style="color:#0077c8;text-decoration:none;font-weight:700;">070-623 13 58</a> · <a href="mailto:tavling@ljungbyss.se" style="color:#0077c8;text-decoration:none;font-weight:700;">tavling@ljungbyss.se</a></p>
+          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><span style="color:#0077c8;text-decoration:none;font-weight:700;">070-623 13 58</span> · <span style="color:#0077c8;text-decoration:none;font-weight:700;">tavling@ljungbyss.se</span></p>
         </article>
 
         <article style="background:#fff;border:1px solid rgba(0,90,153,0.14);border-radius:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
@@ -78,7 +78,7 @@
           <p style="margin:10px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Uppdrag:</strong> Personalansvarig, försäljningsansvarig samt kanslist.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Vem är du?</strong> 45 år, bor i Ljungby, jobbar som personlig assistent och utbildar sig till undersköterska. Har stark familjekoppling till LSS.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Varför engagerar du dig?</strong> Barnens simbakgrund väckte engagemanget. Funktionärsutbildning gav större helhetsbild och ledde vidare till styrelsearbete.</p>
-          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><a href="tel:0702729434" style="color:#0077c8;text-decoration:none;font-weight:700;">070-272 94 34</a> · <a href="mailto:petra.staberg@hotmail.com" style="color:#0077c8;text-decoration:none;font-weight:700;">petra.staberg@hotmail.com</a></p>
+          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><span style="color:#0077c8;text-decoration:none;font-weight:700;">070-272 94 34</span> · <span style="color:#0077c8;text-decoration:none;font-weight:700;">petra.staberg@hotmail.com</span></p>
         </article>
 
         <article style="background:#fff;border:1px solid rgba(0,90,153,0.14);border-radius:18px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
@@ -88,7 +88,7 @@
           <p style="margin:10px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Uppdrag:</strong> Utbildningsansvarig för tränare, ledare och funktionärer.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Vem är du?</strong> Började simma efter en idrottsskada och fastnade för sporten. Ser simning som en skonsam träningsform för alla åldrar.</p>
           <p style="margin:8px 0 0 0;color:#2f4c61;font-size:14px;line-height:1.6;"><strong>Varför engagerar du dig?</strong> Simning är tillgängligt för alla och klubben är välkomnande, vilket gör engagemanget meningsfullt.</p>
-          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><a href="tel:0735232584" style="color:#0077c8;text-decoration:none;font-weight:700;">073-523 25 84</a> · <a href="mailto:utbildning@ljungbyss.se" style="color:#0077c8;text-decoration:none;font-weight:700;">utbildning@ljungbyss.se</a></p>
+          <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><span style="color:#0077c8;text-decoration:none;font-weight:700;">073-523 25 84</span> · <span style="color:#0077c8;text-decoration:none;font-weight:700;">utbildning@ljungbyss.se</span></p>
         </article>
       </section>
 
@@ -97,14 +97,15 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;font-size:22px;line-height:1.3;">Relaterade sidor</h2>
         <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">För fler kontaktvägar och mer om föreningen.</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Kontaktuppgifter</a>
-          <a href="./Kontaktportal.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktportal</a>
-          <a href="./Om_Klubben.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Om klubben</a>
-          <a href="./Historia.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Historia</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
+          <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Om klubben</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161875" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Historia</a>
         </div>
       </section>
     </div>
   </div>
 </div>
+
 
 
