--- a/frontend/Meny.html
+++ b/frontend/Meny.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="sv">
 <head>
   <meta charset="utf-8" />
@@ -262,8 +262,7 @@
         <h2><span class="badge">Hem</span> Grundsidor</h2>
         <ul class="links">
           <li><a class="link-item" href="./Hem/Webshop.html"><span class="link-title">Webshop</span><span class="path">Hem/Webshop.html</span></a></li>
-          <li><a class="link-item" href="./Hem/Webshop-Produkt-mall.html"><span class="link-title">Webshop Produkt (mall)</span><span class="path">Hem/Webshop-Produkt-mall.html</span></a></li>
-          <li><a class="link-item" href="./Hem/craft-community-hoodie.html"><span class="link-title">Craft – Community Hoodie</span><span class="path">Hem/craft-community-hoodie.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-community-hoodie.html"><span class="link-title">Craft - Community Hoodie</span><span class="path">Hem/craft-community-hoodie.html</span></a></li>
           <li><a class="link-item" href="./Hem/craft-evolve-full-zip.html"><span class="link-title">Craft - Evolve Full Zip</span><span class="path">Hem/craft-evolve-full-zip.html</span></a></li>
           <li><a class="link-item" href="./Hem/craft-evolve-pants.html"><span class="link-title">Craft Evolve Pants</span><span class="path">Hem/craft-evolve-pants.html</span></a></li>
           <li><a class="link-item" href="./Hem/craft-evolve-zip-pocket-shorts.html"><span class="link-title">Craft - Evolve Zip Pocket Shorts</span><span class="path">Hem/craft-evolve-zip-pocket-shorts.html</span></a></li>
@@ -277,8 +276,8 @@
           <li><a class="link-item" href="./Hem/lss-mossa-gtk-nova.html"><span class="link-title">LSS M&ouml;ssa (GTK Nova)</span><span class="path">Hem/lss-mossa-gtk-nova.html</span></a></li>
           <li><a class="link-item" href="./Hem/elis-badhandduk.html"><span class="link-title">Elis Badhandduk</span><span class="path">Hem/elis-badhandduk.html</span></a></li>
           <li><a class="link-item" href="./Hem/lss-badmossa.html"><span class="link-title">LSS Badm&ouml;ssa</span><span class="path">Hem/lss-badmossa.html</span></a></li>
-          <li><a class="link-item" href="./Hem/vit-funktionstroja-klubbmodell.html"><span class="link-title">Vit Funktionstr&ouml;ja &ndash; Klubbmodell</span><span class="path">Hem/vit-funktionstroja-klubbmodell.html</span></a></li>
-          <li><a class="link-item" href="./Hem/craft-klubbshorts-bla.html"><span class="link-title">Craft Klubbshorts &ndash; Bl&aring;</span><span class="path">Hem/craft-klubbshorts-bla.html</span></a></li>
+          <li><a class="link-item" href="./Hem/vit-funktionstroja-klubbmodell.html"><span class="link-title">Vit Funktionstr&ouml;ja - Klubbmodell</span><span class="path">Hem/vit-funktionstroja-klubbmodell.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-klubbshorts-bla.html"><span class="link-title">Craft Klubbshorts - Bl&aring;</span><span class="path">Hem/craft-klubbshorts-bla.html</span></a></li>
         </ul>
       </article>
 
@@ -315,7 +314,7 @@
           <li><a class="link-item" href="./Kontakt/Styrelsen.html"><span class="link-title">Styrelsen</span><span class="path">Kontakt/Styrelsen.html</span></a></li>
           <li><a class="link-item" href="./Kontakt/kontaktuppgifter.html"><span class="link-title">Kontaktuppgifter</span><span class="path">Kontakt/kontaktuppgifter.html</span></a></li>
           <li><a class="link-item" href="./Kontakt/Ledare.html"><span class="link-title">Bli ledare</span><span class="path">Kontakt/Ledare.html</span></a></li>
-          <li><a class="link-item" href="./Kontakt/Hjalp_Till_I_Lss.html"><span class="link-title">Hjalp till i LSS</span><span class="path">Kontakt/Hjalp_Till_I_Lss.html</span></a></li>
+          <li><a class="link-item" href="./Kontakt/Hjalp_Till_I_Lss.html"><span class="link-title">Hjälp till i LSS</span><span class="path">Kontakt/Hjalp_Till_I_Lss.html</span></a></li>
           <li><a class="link-item" href="./Kontakt/Sponsorer.html"><span class="link-title">Sponsorer</span><span class="path">Kontakt/Sponsorer.html</span></a></li>
         </ul>
       </article>
@@ -368,3 +367,5 @@
 </div>
 </body>
 </html>
+
+
