--- a/frontend/simskola/fritidskortet.html
+++ b/frontend/simskola/fritidskortet.html
@@ -1,8 +1,8 @@
 <div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <div style="margin-bottom: 24px; text-align: center;">
-            <a href="https://fritidskortet.se" target="_blank">
+            <a href="https://fritidskortet.se" target="_blank" rel="noopener noreferrer">
               <img src="https://cdn.sportadmin.se/699/h/253/8baf4599851ef59899c2e806eac1f4878692a7a444ee1bb992869bfd20232ab3_L.png" alt="Fritidskortet logotyp" style="max-width: 300px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,90,153,0.15);">
             </a>
           </div>
@@ -30,10 +30,10 @@
 
           <div style="display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 28px;">
             <div style="flex: 0 0 auto; padding: 10px 18px; border-radius: 20px; background: rgba(76,175,80,0.1); border: 1px solid rgba(76,175,80,0.3); font-size: 14px; font-weight: 600; color: #2e7d32;">
-              För barn 7–16 år
+              För barn 7-16 år
             </div>
             <div style="flex: 0 0 auto; padding: 10px 18px; border-radius: 20px; background: rgba(33,150,243,0.1); border: 1px solid rgba(33,150,243,0.3); font-size: 14px; font-weight: 600; color: #1565C0;">
-              550–2 500 kr per barn och år
+              550-2 500 kr per barn och år
             </div>
             <div style="flex: 0 0 auto; padding: 10px 18px; border-radius: 20px; background: rgba(255,152,0,0.1); border: 1px solid rgba(255,152,0,0.3); font-size: 14px; font-weight: 600; color: #E65100;">
               Gäller terminsavgifter
@@ -41,10 +41,10 @@
           </div>
 
           <div style="display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 28px;">
-            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);">
+            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
               Boka simskola eller träning
             </a>
-            <a href="https://fritidskortet.se" target="_blank" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 600; color: #0077c8; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; text-decoration: none; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
+            <a href="https://fritidskortet.se" target="_blank" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 600; color: #0077c8; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; text-decoration: none; box-shadow:0 8px 24px rgba(12,68,117,0.08);" rel="noopener noreferrer">
               Logga in på fritidskortet.se
             </a>
           </div>
@@ -54,27 +54,27 @@
           </p>
 
           <div style="background: linear-gradient(135deg, rgba(0,119,200,0.08) 0%, rgba(0,119,200,0.03) 100%); border-left: 4px solid #0077c8; border-radius: 12px; padding: 24px; margin-bottom: 28px; box-shadow: 0 4px 16px rgba(0,119,200,0.1);">
-            <h3 style="margin: 0 0 8px 0; font-size: 17px; font-weight: 700; color: #005a99;">⚠️ Viktigt att veta</h3>
+            <h3 style="margin: 0 0 8px 0; font-size: 17px; font-weight: 700; color: #005a99;">Viktigt att veta</h3>
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #3a5a70;">
               När du använder Fritidskortet hos Ljungby Simsällskap betalar du alltid fakturan först. All hantering är manuell hos oss, så utbetalningen kan ta lite tid.
             </p>
           </div>
 
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
-            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🤔 Varför använda Fritidskortet?</h2>
+            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">Varför använda Fritidskortet?</h2>
             <p style="margin: 0 0 12px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               Fritidskortet är till för att göra det enklare att låta barn fortsätta simma, även när ekonomin är ansträngd.
             </p>
             <ul style="margin: 0; padding-left: 18px; font-size: 14px; line-height: 1.6; color: #4a6a7e; list-style-type: disc;">
               <li>Sänk kostnaden för simskola och simträning för barn mellan 7 och 16 år.</li>
-              <li>Upp till 550 kr per år – eller 2 500 kr om hushållet fick bostadsbidrag förra året.</li>
+              <li>Upp till 550 kr per år - eller 2 500 kr om hushållet fick bostadsbidrag förra året.</li>
               <li>Gäller terminsavgifter i våra simgrupper, inte enstaka engångsaktiviteter.</li>
               <li>Pengarna måste användas under året, senast den <strong style="color: #005a99;">30 november</strong>.</li>
             </ul>
           </div>
 
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
-            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🔄 Så funkar Fritidskortet hos oss</h2>
+            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">Så funkar Fritidskortet hos oss</h2>
             <p style="margin: 0 0 20px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               Här är de tre viktigaste stegen:
             </p>
@@ -122,7 +122,7 @@
           </div>
 
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
-            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">📋 Det här behöver du ha koll på</h2>
+            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">Det här behöver du ha koll på</h2>
             <ul style="margin: 0; padding-left: 18px; font-size: 14px; line-height: 1.6; color: #4a6a7e; list-style-type: disc;">
               <li>Fritidskortet gäller för barn från det år de fyller 7 till och med det år de fyller 16.</li>
               <li>När du använder Fritidskortet hos oss betalar du alltid fakturan i SportAdmin/Qvickly först, sedan får du pengar tillbaka i efterhand.</li>
@@ -159,21 +159,21 @@
             </details>
             <details style="margin:0 0 10px 0;">
               <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vad gör jag om jag saknar e-legitimation?</summary>
-              <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Om du saknar e-legitimation finns andra sätt att ansöka, till exempel via blankett. På <a href="https://fritidskortet.se/blankett" target="_blank" style="color:#0077c8;text-decoration:none;font-weight:600;">fritidskortet.se/blankett</a> kan du läsa mer och ansöka med blankett.</p>
+              <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Om du saknar e-legitimation finns andra sätt att ansöka, till exempel via blankett. På <a href="https://fritidskortet.se/blankett" target="_blank" style="color:#0077c8;text-decoration:none;font-weight:600;" rel="noopener noreferrer">fritidskortet.se/blankett</a> kan du läsa mer och ansöka med blankett.</p>
             </details>
-            <p style="margin:16px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">För fler frågor om reglerna kring Fritidskortet och den senaste informationen nationellt kan du läsa Fritidskortets egna frågor och svar på <a href="https://fritidskortet.se/fragor-och-svar" target="_blank" style="color:#0077c8;text-decoration:none;font-weight:600;">fritidskortet.se/fragor-och-svar</a>.</p>
+            <p style="margin:16px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">För fler frågor om reglerna kring Fritidskortet och den senaste informationen nationellt kan du läsa Fritidskortets egna frågor och svar på <a href="https://fritidskortet.se/fragor-och-svar" target="_blank" style="color:#0077c8;text-decoration:none;font-weight:600;" rel="noopener noreferrer">fritidskortet.se/fragor-och-svar</a>.</p>
           </section>
           <div style="display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 28px;">
-            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:14px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);">
+            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:14px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
               Boka simskola eller träning
             </a>
-            <a href="https://fritidskortet.se" target="_blank" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:14px; font-weight: 600; color: #0077c8; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; text-decoration: none; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
+            <a href="https://fritidskortet.se" target="_blank" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:14px; font-weight: 600; color: #0077c8; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; text-decoration: none; box-shadow:0 8px 24px rgba(12,68,117,0.08);" rel="noopener noreferrer">
               Logga in på fritidskortet.se
             </a>
           </div>
 
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
-            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">💬 Kontakt</h2>
+            <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">Kontakt</h2>
             
             <p style="margin: 0 0 12px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               <strong style="color: #005a99;">Behöver du hjälp?</strong><br>
@@ -189,7 +189,7 @@
 
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               Fler kontaktvägar hittar du på vår
-              <a href="https://www.ljungbyss.se/start/?ID=460051" style="color:#0077c8; text-decoration:none; font-weight: 600;">
+              <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">
                 kontaktsida
               </a>.
             </p>
@@ -197,4 +197,7 @@
     </div>
   </div>
 </div>
+
+
+
 
