--- a/frontend/simskola/ova-i-vatten.html
+++ b/frontend/simskola/ova-i-vatten.html
@@ -1,7 +1,7 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
 
-  <div style="max-width:895px;margin:0 auto;">
+  <div style="max-width:850px;margin:0 auto;">
 
     <div style="margin-bottom: 24px; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 32px rgba(0,90,153,0.15);">
       <img src="https://www.ljungbyss.se/images/253/16920/50645747-F9C9-45AD-906F-BC35F2116821_1721448.JPG?v=2024-11-01%2016:09:42" alt="Simskolan: headerbild" style="width: 100%; height: auto; display: block;">
@@ -74,7 +74,7 @@
       </div>
 
       <div style="margin-top: 20px; position: relative; border-radius: 12px; overflow: hidden; max-width: 560px; box-shadow: 0 4px 14px rgba(0, 90, 153, 0.12);">
-        <a href="https://www.youtube.com/watch?v=fLnOSV3PQ6A" target="_blank" rel="noopener" style="display: block; text-decoration: none;">
+        <a href="https://www.youtube.com/watch?v=fLnOSV3PQ6A" target="_blank" rel="noopener noreferrer" style="display: block; text-decoration: none;">
           <img src="https://img.youtube.com/vi/fLnOSV3PQ6A/hqdefault.jpg" alt="Introduktion Simningens ABC: thumbnail" style="width: 100%; height: auto; display: block;">
         <span style="position: absolute; top: 12px; left: 12px; padding: 6px 12px; border-radius: 20px; background: rgba(0, 0, 0, 0.7); color: #ffffff; font-size: 13px; font-weight: 700; letter-spacing: 0.3px;">Film</span>
         <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 68px; height: 48px; border-radius: 14px; background: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center;">
@@ -135,7 +135,7 @@
       </div>
 
       <div style="margin-top: 20px; position: relative; border-radius: 12px; overflow: hidden; max-width: 560px; box-shadow: 0 4px 14px rgba(0, 90, 153, 0.12);">
-        <a href="https://www.youtube.com/watch?v=qson68WrCOw" target="_blank" rel="noopener" style="display: block; text-decoration: none;">
+        <a href="https://www.youtube.com/watch?v=qson68WrCOw" target="_blank" rel="noopener noreferrer" style="display: block; text-decoration: none;">
           <img src="https://img.youtube.com/vi/qson68WrCOw/hqdefault.jpg" alt="Doppa och andas: thumbnail" style="width: 100%; height: auto; display: block;">
         <span style="position: absolute; top: 12px; left: 12px; padding: 6px 12px; border-radius: 20px; background: rgba(0, 0, 0, 0.7); color: #ffffff; font-size: 13px; font-weight: 700;">Film</span>
         <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 68px; height: 48px; border-radius: 14px; background: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center;">
@@ -186,7 +186,7 @@
       </div>
 
       <div style="margin-top: 20px; position: relative; border-radius: 12px; overflow: hidden; max-width: 560px; box-shadow: 0 4px 14px rgba(0, 90, 153, 0.12);">
-        <a href="https://www.youtube.com/watch?v=Ff4-NUr46Bc" target="_blank" rel="noopener" style="display: block; text-decoration: none;">
+        <a href="https://www.youtube.com/watch?v=Ff4-NUr46Bc" target="_blank" rel="noopener noreferrer" style="display: block; text-decoration: none;">
           <img src="https://img.youtube.com/vi/Ff4-NUr46Bc/hqdefault.jpg" alt="Flyta: thumbnail" style="width: 100%; height: auto; display: block;">
         <span style="position: absolute; top: 12px; left: 12px; padding: 6px 12px; border-radius: 20px; background: rgba(0, 0, 0, 0.7); color: #ffffff; font-size: 13px; font-weight: 700;">Film</span>
         <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 68px; height: 48px; border-radius: 14px; background: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center;">
@@ -236,7 +236,7 @@
       </div>
 
       <div style="margin-top: 20px; position: relative; border-radius: 12px; overflow: hidden; max-width: 560px; box-shadow: 0 4px 14px rgba(0, 90, 153, 0.12);">
-        <a href="https://www.youtube.com/watch?v=DHGgU4dGEfU" target="_blank" rel="noopener" style="display: block; text-decoration: none;">
+        <a href="https://www.youtube.com/watch?v=DHGgU4dGEfU" target="_blank" rel="noopener noreferrer" style="display: block; text-decoration: none;">
           <img src="https://img.youtube.com/vi/DHGgU4dGEfU/hqdefault.jpg" alt="Hoppa: thumbnail" style="width: 100%; height: auto; display: block;">
         <span style="position: absolute; top: 12px; left: 12px; padding: 6px 12px; border-radius: 20px; background: rgba(0, 0, 0, 0.7); color: #ffffff; font-size: 13px; font-weight: 700;">Film</span>
         <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 68px; height: 48px; border-radius: 14px; background: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center;">
@@ -287,7 +287,7 @@
       </div>
 
       <div style="margin-top: 20px; position: relative; border-radius: 12px; overflow: hidden; max-width: 560px; box-shadow: 0 4px 14px rgba(0, 90, 153, 0.12);">
-        <a href="https://www.youtube.com/watch?v=Qk_ARWgsI9E" target="_blank" rel="noopener" style="display: block; text-decoration: none;">
+        <a href="https://www.youtube.com/watch?v=Qk_ARWgsI9E" target="_blank" rel="noopener noreferrer" style="display: block; text-decoration: none;">
           <img src="https://img.youtube.com/vi/Qk_ARWgsI9E/hqdefault.jpg" alt="Glida: thumbnail" style="width: 100%; height: auto; display: block;">
         <span style="position: absolute; top: 12px; left: 12px; padding: 6px 12px; border-radius: 20px; background: rgba(0, 0, 0, 0.7); color: #ffffff; font-size: 13px; font-weight: 700;">Film</span>
         <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 68px; height: 48px; border-radius: 14px; background: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center;">
@@ -336,7 +336,7 @@
       </div>
 
       <div style="margin-top: 20px; position: relative; border-radius: 12px; overflow: hidden; max-width: 560px; box-shadow: 0 4px 14px rgba(0, 90, 153, 0.12);">
-        <a href="https://www.youtube.com/watch?v=3hpbYj0d_PA" target="_blank" rel="noopener" style="display: block; text-decoration: none;">
+        <a href="https://www.youtube.com/watch?v=3hpbYj0d_PA" target="_blank" rel="noopener noreferrer" style="display: block; text-decoration: none;">
           <img src="https://img.youtube.com/vi/3hpbYj0d_PA/hqdefault.jpg" alt="Rotera: thumbnail" style="width: 100%; height: auto; display: block;">
         <span style="position: absolute; top: 12px; left: 12px; padding: 6px 12px; border-radius: 20px; background: rgba(0, 0, 0, 0.7); color: #ffffff; font-size: 13px; font-weight: 700;">Film</span>
         <span style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 68px; height: 48px; border-radius: 14px; background: rgba(0, 0, 0, 0.7); display: flex; align-items: center; justify-content: center;">
@@ -454,10 +454,10 @@
           <h3 style="margin: 0 0 12px 0; color: #005a99; font-size: 17px; font-weight: 700;">Relaterat</h3>
           <p style="margin: 0 0 16px 0; font-size: 14px; color: #5a7a94;">Vill ni gå vidare? Här är genvägar som brukar hjälpa.</p>
           <div style="display: flex; flex-wrap: wrap; gap: 10px;">
-            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" target="_blank" rel="noopener" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); color: #ffffff; text-decoration: none; font-size: 14px; font-weight: 700; box-shadow: 0 4px 14px rgba(0,119,200,0.24);">Boka simskola</a>
-            <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; border: 1px solid #b9d7ef; background: #ffffff; color: #005a99; text-decoration: none; font-size: 14px; font-weight: 600;">Simskolan</a>
-            <a href="https://www.ljungbyss.se/sida/?ID=179936" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; border: 1px solid #b9d7ef; background: #ffffff; color: #005a99; text-decoration: none; font-size: 14px; font-weight: 600;">Simmärken</a>
-            <a href="https://www.ljungbyss.se/sida/?ID=580304" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; border: 1px solid #b9d7ef; background: #ffffff; color: #005a99; text-decoration: none; font-size: 14px; font-weight: 600;">Fritidskortet</a>
+            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); color: #ffffff; text-decoration: none; font-size: 14px; font-weight: 700; box-shadow: 0 4px 14px rgba(0,119,200,0.24);">Boka simskola</a>
+            <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; border: 1px solid #b9d7ef; background: #ffffff; color: #005a99; text-decoration: none; font-size: 14px; font-weight: 600;" target="_blank" rel="noopener noreferrer">Simskolan</a>
+            <a href="https://www.ljungbyss.se/sida/?ID=179936" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; border: 1px solid #b9d7ef; background: #ffffff; color: #005a99; text-decoration: none; font-size: 14px; font-weight: 600;" target="_blank" rel="noopener noreferrer">Simmärken</a>
+            <a href="https://www.ljungbyss.se/sida/?ID=580304" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 18px; border-radius: 10px; border: 1px solid #b9d7ef; background: #ffffff; color: #005a99; text-decoration: none; font-size: 14px; font-weight: 600;" target="_blank" rel="noopener noreferrer">Fritidskortet</a>
           </div>
         </div>
 
@@ -489,12 +489,3 @@
 
 </div>
 </div>
-
-
-
-
-
-
-
-
-
