--- a/frontend/simskola/tider-perioder.html
+++ b/frontend/simskola/tider-perioder.html
@@ -1,6 +1,6 @@
 <div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <div style="background: rgba(255,255,255,0.85); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 36px 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
             
             <div style="display: flex; align-items: center; gap: 16px; margin-bottom: 20px; flex-wrap: wrap;">
@@ -29,17 +29,17 @@
                   Grupperna visas senast dagen innan bokningen öppnar och du behöver vara inloggad för att boka plats.
                 </p>
                 <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-                  <a href="https://www.ljungbyss.se/sida/?ID=161889" style="text-decoration:none; font-weight: 600; color:#0077c8">Avgifter</a>
+                  <a href="https://www.ljungbyss.se/sida/?ID=161889" style="text-decoration:none; font-weight: 600; color:#0077c8" target="_blank" rel="noopener noreferrer">Avgifter</a>
                   <span style="color: #555"> och </span>
-                  <a href="https://www.ljungbyss.se/start/?ID=460051" style="text-decoration:none; font-weight: 600; color:#0077c8">Kontakt</a>
+                  <a href="https://www.ljungbyss.se/sida/?ID=591089" style="text-decoration:none; font-weight: 600; color:#0077c8" target="_blank" rel="noopener noreferrer">Kontakt</a>
                   <span style="color: #555"> om du behöver hjälp.</span>
                 </p>
               </div>
               <div style="flex: 0 0 240px; min-width: 220px; display: flex; flex-direction: column; gap: 10px;">
-                <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; border-radius:6px; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); color: #fff; text-decoration: none; font-weight: 700; text-align: center; font-size:15px; box-shadow: 0 4px 16px rgba(0,119,200,0.3);">
+                <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; border-radius:6px; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); color: #fff; text-decoration: none; font-weight: 700; text-align: center; font-size:15px; box-shadow: 0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
                   Boka simskola
                 </a>
-                <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display: flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; border-radius:6px; background: rgba(255,255,255,0.9); color: #0077c8; text-decoration: none; font-weight: 600; border:1px solid rgba(0,90,153,0.12); text-align: center; font-size:15px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
+                <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display: flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; border-radius:6px; background: rgba(255,255,255,0.9); color: #0077c8; text-decoration: none; font-weight: 600; border:1px solid rgba(0,90,153,0.12); text-align: center; font-size:15px; box-shadow:0 8px 24px rgba(12,68,117,0.08);" target="_blank" rel="noopener noreferrer">
                   Osäker på nivå? Se grupperna
                 </a>
               </div>
@@ -50,7 +50,7 @@
             Tips: På mobil kan du scrolla i sidled i tabellen för att se alla dagar.
           </p>
 
-          <div id="schema-tabell" style="overflow-x: auto; border: 3px solid #0077c8; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,90,153,0.15); margin-bottom: 28px;">
+          <div style="overflow-x: auto; border: 3px solid #0077c8; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,90,153,0.15); margin-bottom: 28px;">
             <table style="border-collapse: collapse; width: 100%; min-width: 640px; background: #ffffff">
               <thead>
                 <tr>
@@ -117,7 +117,7 @@
                 </tr>
                 <tr style="background: #fef3e6">
                   <td style="padding: 10px 4px; border-bottom: 1px solid #eef4f8; white-space: nowrap; text-align: center; width: 56px; font-weight: 600">v.8</td>
-                  <td colspan="7" style="padding: 12px 6px; border-bottom: 1px solid #eef4f8; text-align: center; font-weight: 700; color: #b45309">&#9975;&#65039; SPORTLOV &#8211; ingen simskola</td>
+                  <td colspan="7" style="padding: 12px 6px; border-bottom: 1px solid #eef4f8; text-align: center; font-weight: 700; color: #b45309">&#9975;&#65039; SPORTLOV - ingen simskola</td>
                 </tr>
                 <tr style="background: #f5fafd">
                   <td style="padding: 10px 4px; border-bottom: 1px solid #eef4f8; white-space: nowrap; text-align: center; width: 56px; font-weight: 600">v.9</td>
@@ -181,7 +181,7 @@
                 </tr>
                 <tr style="background: #fef3e6">
                   <td style="padding: 10px 4px; border-bottom: 1px solid #eef4f8; white-space: nowrap; text-align: center; width: 56px; font-weight: 600">v.15</td>
-                  <td colspan="7" style="padding: 12px 6px; border-bottom: 1px solid #eef4f8; text-align: center; font-weight: 700; color: #b45309">&#128035; PÅSKLOV &#8211; ingen simskola</td>
+                  <td colspan="7" style="padding: 12px 6px; border-bottom: 1px solid #eef4f8; text-align: center; font-weight: 700; color: #b45309">&#128035; PÅSKLOV - ingen simskola</td>
                 </tr>
                 <tr style="background: #f5fafd">
                   <td style="padding: 10px 4px; border-bottom: 1px solid #eef4f8; white-space: nowrap; text-align: center; width: 56px; font-weight: 600">v.16</td>
@@ -239,12 +239,12 @@
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08); text-align: center">
             <p style="margin: 0 0 12px; font-size: 16px; line-height: 1.6; font-weight: 600; color: #005a99">Redo att boka?</p>
             <div style="margin-top:12px;display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
-              <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);color:#ffffff;text-decoration:none;font-weight:700;text-align:center;font-size:15px;box-shadow:0 4px 16px rgba(0,119,200,0.3);">
+              <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);color:#ffffff;text-decoration:none;font-weight:700;text-align:center;font-size:15px;box-shadow:0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
                 Boka simskola
               </a>
             </div>
             <p style="margin:10px 0 0 0;font-size:14px;line-height:1.6;color:#5f7a8f;">
-              Frågor? <a href="https://www.ljungbyss.se/start/?ID=460051" style="color:#0077c8;text-decoration:none;font-weight:600;">Kontaktportal</a>
+              Frågor? <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;text-decoration:none;font-weight:600;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
             </p>
             <p style="margin:10px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.6;">Tider kan uppdateras under terminen. Kontrollera alltid den här sidan för senaste information.</p>
           </div>
@@ -254,3 +254,6 @@
     </div>
   </div>
 </div>
+
+
+
