--- a/frontend/Hem/craft-community-hoodie.html
+++ b/frontend/Hem/craft-community-hoodie.html
@@ -1,36 +1,39 @@
-<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
-  <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
+  <div style="min-height:100vh;padding:24px 20px 40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
+    <div style="max-width:850px;margin:0 auto;">
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
-        <h1 style="margin:0 0 8px 0;font-size:28px;line-height:1.2;color:#005a99;">Craft &ndash; Community Hoodie</h1>
-        <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:15px;max-width:65ch;">Modern hoodie med atletisk passform och sportig design i royalbl&aring; f&auml;rg. Perfekt f&ouml;r b&aring;de tr&auml;ning och vardag.</p>
-      </section>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=575279" style="display:inline-flex;align-items:center;gap:6px;margin:0 0 10px 0;color:#005a99;text-decoration:none;font-size:13px;font-weight:700;">&larr; Tillbaka till webbshop</a>
+        <div style="display:flex;flex-wrap:wrap;gap:8px;margin:0 0 16px 0;">
+          <span style="display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid #d7e7f7;background:#f5fbff;color:#2f4c61;font-size:12px;font-weight:700;">K&ouml;pst&auml;lle: Profilh&ouml;rnan</span>
+          <span style="display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid #d7e7f7;background:#f5fbff;color:#2f4c61;font-size:12px;font-weight:700;">Pris: 480 kr</span>
+        </div>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px;align-items:start;">
-          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
-            <div style="width:100%;height:300px;background:#f5fbff;border:1px solid #dde9f5;border-radius:12px;display:flex;align-items:center;justify-content:center;overflow:hidden;">
-              <img src="https://www.ljungbyss.se/images/253/5403/41A7205B-6088-4F65-A993-D9B466D8822D_1357143_400.PNG" alt="Craft &ndash; Community Hoodie" style="width:100%;height:100%;object-fit:contain;">
+          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:16px;box-shadow:0 5px 14px rgba(0,90,153,0.08);padding:16px;">
+            <div style="width:100%;height:310px;background:linear-gradient(180deg,#f8fcff 0%,#f2f9ff 100%);border:1px solid #dde9f5;border-radius:12px;display:flex;align-items:center;justify-content:center;overflow:hidden;">
+              <img src="https://www.ljungbyss.se/images/253/5403/41A7205B-6088-4F65-A993-D9B466D8822D_1357143_400.PNG" alt="Craft - Community Hoodie" style="width:100%;height:100%;object-fit:contain;">
             </div>
+            <p style="margin:10px 0 4px 0;color:#6f8799;font-size:11px;font-weight:500;letter-spacing:0.01em;">Craft - Community Hoodie</p>
+            <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Modern hoodie med atletisk passform och sportig design i royalbl&aring; f&auml;rg. Perfekt f&ouml;r b&aring;de tr&auml;ning och vardag.</p>
           </article>
 
-          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:16px;">
+          <article style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:16px;box-shadow:0 5px 14px rgba(0,90,153,0.08);padding:16px;">
             <p style="margin:0 0 8px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Varianter</p>
-            <p style="margin:0 0 8px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Dam: Art.nr 1906973-345000 &bull; Storlek XS&ndash;2XL</p>
-            <p style="margin:0 0 8px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Herr: Art.nr 1906972-345000 &bull; Storlek XS&ndash;3XL</p>
-            <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Junior: Art.nr 1906973-345000 &bull; 122/128, 134/140, 146/152, 158/164</p>
+            <p style="margin:0 0 8px 0;color:#2f4c61;font-size:14px;line-height:1.65;">Dam: Art.nr 1906973-345000 &bull; Storlek XS-2XL</p>
+            <p style="margin:0 0 8px 0;color:#2f4c61;font-size:14px;line-height:1.65;">Herr: Art.nr 1906972-345000 &bull; Storlek XS-3XL</p>
+            <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.65;">Junior: Art.nr 1906973-345000 &bull; 122/128, 134/140, 146/152, 158/164</p>
             <p style="margin:0 0 8px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Material</p>
             <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">65% polyester, 35% bomull</p>
 
             <p style="margin:0 0 4px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Pris</p>
             <p style="margin:0 0 14px 0;color:#1a1a1a;font-size:28px;font-weight:700;line-height:1.2;">480 kr</p>
 
-            <a href="https://www.google.com/maps/search/?api=1&query=Profilh%C3%B6rnan+Fabriksgatan+17+Ljungby" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">&#128205; Visa p&aring; Google Maps</a>
+            <a href="https://www.google.com/maps/search/?api=1&query=Profilh%C3%B6rnan+Fabriksgatan+17+Ljungby" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:8px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" target="_blank" rel="noopener noreferrer">Hitta till Profilh&ouml;rnan</a>
 
             <div style="margin-top:12px;background:#f5fbff;border:1px solid #dde9f5;border-radius:12px;padding:12px;">
               <p style="margin:0 0 6px 0;color:#005a99;font-size:14px;font-weight:700;">K&ouml;p via Profilh&ouml;rnan</p>
               <img src="https://cdn.sportadmin.se/699/h/253/25d021973feb25729189ccabba2e7bcdc1519800f363621946dbef890f985979_L.png" alt="Profilh&ouml;rnan logotyp" style="height:28px;width:auto;background:#1a1a1a;border-radius:4px;padding:4px 8px;display:block;margin-bottom:8px;object-fit:contain;">
-              <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;">Profilh&ouml;rnan &ndash; Fabriksgatan 17, Ljungby.</p>
+              <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;">Fabriksgatan 17, Ljungby</p>
             </div>
           </article>
         </div>
