--- a/frontend/Kontakt/Historia.html
+++ b/frontend/Kontakt/Historia.html
@@ -1,6 +1,6 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <section style="border-radius:20px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);box-shadow:0 8px 22px rgba(12,68,117,0.14);padding:28px;margin-bottom:18px;color:#ffffff;">
         <p style="margin:0 0 8px 0;font-size:13px;font-weight:700;letter-spacing:0.06em;text-transform:uppercase;color:rgba(255,255,255,0.9);">Ljungby Simsällskap</p>
         <h1 style="margin:0;font-size:30px;line-height:1.2;letter-spacing:-0.3px;">Historia</h1>
@@ -256,10 +256,10 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Läs vidare</h2>
         <p style="margin:0 0 14px 0;color:#2f4c61;font-size:14px;line-height:1.6;max-width:65ch;">Fördjupa dig i klubbens nuvarande verksamhet, styrelse och kontaktvägar.</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;padding-top:2px;">
-          <a href="./Om_Klubben.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">Om klubben</a>
-          <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
-          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Kontaktuppgifter</a>
-          <a href="../simskola/simskolegrupper/simskolegrupper.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Simskolegrupper</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Om klubben</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
+          <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>
         </div>
       </section>
     </div>
