--- a/frontend/Kontakt/Hjalp_Till_I_Lss.html
+++ b/frontend/Kontakt/Hjalp_Till_I_Lss.html
@@ -1,6 +1,6 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <section style="border-radius:20px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);box-shadow:0 8px 22px rgba(12,68,117,0.14);padding:28px;margin-bottom:18px;color:#ffffff;">
               <div style="display:flex;align-items:center;gap:14px;flex-wrap:wrap;">
                 <div style="width:52px;height:52px;border-radius:14px;display:flex;align-items:center;justify-content:center;background:rgba(255,255,255,0.2);box-shadow:0 4px 14px rgba(0,0,0,0.18);font-size:24px;flex-shrink:0;">&#129309;</div>
@@ -187,7 +187,7 @@
               <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Maila oss och skriv g&auml;rna &quot;Hj&auml;lp till i LSS&quot; i &auml;mnesraden. Ber&auml;tta kort vad du gillar att g&ouml;ra och hur mycket tid du vill l&auml;gga. Om knappen inte fungerar i din webbl&auml;sare kan du kopiera adressen under.</p>
               <div style="margin-top:14px;display:flex;align-items:center;gap:10px;flex-wrap:wrap;">
                 <a href="mailto:info@ljungbyss.se?subject=Hjalp%20till%20i%20LSS" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">&Ouml;ppna mailapp</a>
-                <a href="https://www.ljungbyss.se/start/?ID=460051" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Kontaktportal</a>
+                <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
               </div>
               <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;">E-post: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
             </section>
@@ -197,14 +197,15 @@
               <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;letter-spacing:-0.2px;font-size:22px;">Relaterade sidor</h2>
               <p style="margin:0 0 12px 0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Mer information om engagemang och kontakt i föreningen.</p>
               <div style="display:flex;gap:10px;flex-wrap:wrap;">
-                <a href="./Ledare.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Bli ledare</a>
-                <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
-                <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktuppgifter</a>
-                <a href="../simskola/simskolegrupper/simskolegrupper.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Simskolegrupper</a>
+                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Bli ledare</a>
+                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
+                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
+                <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>
               </div>
             </section>
     </div>
   </div>
 </div>
+
 
 
