--- a/frontend/Kontakt/Kontaktportal.html
+++ b/frontend/Kontakt/Kontaktportal.html
@@ -1,6 +1,6 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h1 style="margin:0 0 10px 0;font-size:28px;line-height:1.2;color:#005a99;">Kontaktportal</h1>
         <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:15px;max-width:65ch;">Välj väg nedan så guidar vi dig rätt. Snabbt, tydligt och utan krångel.</p>
@@ -9,7 +9,7 @@
       <section style="border-radius:20px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);box-shadow:0 8px 22px rgba(12,68,117,0.14);padding:24px;margin-bottom:18px;color:#ffffff;">
         <h2 style="margin:0 0 10px 0;font-size:22px;line-height:1.3;color:#ffffff;">Behöver du svar direkt?</h2>
         <p style="margin:0 0 14px 0;line-height:1.6;font-size:14px;color:rgba(255,255,255,0.92);">Mejl: <strong>info@ljungbyss.se</strong><br>Telefon/SMS: <strong>072-218 2007</strong></p>
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#005a99;">Se kontaktuppgifter</a>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#005a99;" target="_blank" rel="noopener noreferrer">Se kontaktuppgifter</a>
       </section>
 
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
@@ -18,25 +18,25 @@
           <article style="background:linear-gradient(135deg,#2e7d32 0%,#1b5e20 100%);border:1px solid rgba(46,125,50,0.25);border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(27,94,32,0.2);">
             <h3 style="margin:0 0 8px 0;color:#ffffff;font-size:18px;line-height:1.25;">Boka plats</h3>
             <p style="margin:0 0 12px 0;color:rgba(255,255,255,0.92);line-height:1.6;font-size:14px;">Kurser, grupper och pass. Öppna bokningen här.</p>
-            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#2e7d32;">Gå till bokningen</a>
+            <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#2e7d32;" target="_blank" rel="noopener noreferrer">Gå till bokningen</a>
           </article>
 
           <article style="background:#ffffff;border:1px solid #dde9f5;border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(12,68,117,0.08);">
             <h3 style="margin:0 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Frågor om simskola</h3>
             <p style="margin:0 0 12px 0;color:#2f4c61;line-height:1.6;font-size:14px;">Nivåer, tider, avgifter, simmärken och vanliga frågor.</p>
-            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">Läs mer</a>
+            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" target="_blank" rel="noopener noreferrer">Läs mer</a>
           </article>
 
           <article style="background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);border:1px solid rgba(0,119,200,0.25);border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(12,68,117,0.2);">
             <h3 style="margin:0 0 8px 0;color:#ffffff;font-size:18px;line-height:1.25;">Träna och tävla</h3>
             <p style="margin:0 0 12px 0;color:rgba(255,255,255,0.92);line-height:1.6;font-size:14px;">Träningsgrupper, schema, tävlingar och resultat.</p>
-            <a href="https://ljungbyss.web.sportadmin.se/start/?ID=161577" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#0077c8;">Utforska</a>
+            <a href="https://ljungbyss.web.sportadmin.se/start/?ID=161577" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#0077c8;" target="_blank" rel="noopener noreferrer">Utforska</a>
           </article>
 
           <article style="background:linear-gradient(135deg,#e67e22 0%,#d35400 100%);border:1px solid rgba(211,84,0,0.25);border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(211,84,0,0.2);">
             <h3 style="margin:0 0 8px 0;color:#ffffff;font-size:18px;line-height:1.25;">Bli ledare</h3>
             <p style="margin:0 0 12px 0;color:rgba(255,255,255,0.92);line-height:1.6;font-size:14px;">Gör skillnad i vattnet och skicka intresseanmälan.</p>
-            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#e67e22;">Anmäl intresse</a>
+            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#e67e22;" target="_blank" rel="noopener noreferrer">Anmäl intresse</a>
           </article>
         </div>
       </section>
@@ -53,8 +53,8 @@
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Snabblänkar</h2>
         <ul style="margin:0;padding-left:18px;line-height:1.8;color:#2f4c61;font-size:14px;">
-          <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="color:#0077c8;font-weight:600;text-decoration:none;">Styrelse och ledare</a></li>
-          <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="color:#0077c8;font-weight:600;text-decoration:none;">Sponsorer</a></li>
+          <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Styrelse och ledare</a></li>
+          <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Sponsorer</a></li>
         </ul>
       </section>
 
@@ -63,16 +63,15 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Relaterade sidor</h2>
         <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Fördjupa dig i kontaktvägar, föreningen och engagemang.</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Kontaktuppgifter</a>
-          <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
-          <a href="./Om_Klubben.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Om klubben</a>
-          <a href="./Ledare.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Bli ledare</a>
-          <a href="../simskola/simskolegrupper/simskolegrupper.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Simskolegrupper</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Om klubben</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Bli ledare</a>
+          <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>
         </div>
       </section>
     </div>
   </div>
 </div>
-
 
 
