--- a/frontend/Kontakt/Om_Klubben.html
+++ b/frontend/Kontakt/Om_Klubben.html
@@ -1,6 +1,6 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <div style="position:relative;margin-bottom:18px;border-radius:16px;overflow:hidden;box-shadow:0 6px 20px rgba(0,90,153,0.12);">
         <img src="https://www.ljungbyss.se/images/253/5403/6563FBB4-E2E7-48FD-81BB-F79F909C67A4_1506071_1280.JPG?v=2023-10-20%2015:38:31" alt="Ljungby Simsällskap i simhallen" style="display:block;width:100%;height:315px;object-fit:cover;object-position:50% 78%;">
         <div style="position:absolute;left:14px;top:14px;display:flex;gap:8px;flex-wrap:wrap;">
@@ -39,7 +39,7 @@
           <div style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:14px;padding:14px;">
             <p style="margin:0 0 6px 0;color:#5f7a8f;font-size:12px;font-weight:700;">Postadress</p>
             <p style="margin:0 0 10px 0;color:#2f4c61;line-height:1.6;font-size:14px;">Sunnerbohallen, Box 837<br>341 18 Ljungby</p>
-            <a href="https://www.google.com/maps/search/?api=1&query=Sunnerbohallen+Box+837+341+18+Ljungby" style="display:inline-flex;align-items:center;justify-content:center;padding:10px 14px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#f5fbff;color:#005a99;">Hitta hit (Maps)</a>
+            <a href="https://www.google.com/maps/search/?api=1&query=Sunnerbohallen+Box+837+341+18+Ljungby" style="display:inline-flex;align-items:center;justify-content:center;padding:10px 14px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#f5fbff;color:#005a99;" target="_blank" rel="noopener noreferrer">Hitta hit (Maps)</a>
           </div>
           <div style="background:#ffffff;border:1px solid rgba(0,90,153,0.12);border-radius:14px;padding:14px;">
             <p style="margin:0 0 6px 0;color:#5f7a8f;font-size:12px;font-weight:700;">Öppettider och kontorsdagar</p>
@@ -61,7 +61,7 @@
         </div>
         <p style="margin:0 0 8px 0;color:#35566d;font-size:14px;line-height:1.6;">E-post tävling/träning: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
         <p style="margin:0 0 10px 0;color:#35566d;font-size:14px;line-height:1.6;">E-post simskola: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">simskolan@ljungbyss.se</span></p>
-        <p style="margin:0;color:#2f4c61;font-size:14px;line-height:1.6;">Hemsida: <a href="https://www.ljungbyss.se" style="color:#0077c8;font-weight:600;text-decoration:none;">www.ljungbyss.se</a></p>
+        <p style="margin:0;color:#2f4c61;font-size:14px;line-height:1.6;">Hemsida: <a href="https://www.ljungbyss.se" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">www.ljungbyss.se</a></p>
       </section>
 
       <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
@@ -69,12 +69,14 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Läs vidare</h2>
         <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Vill du se hur klubben arbetar idag och hur allt hänger ihop?</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="./Historia.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Historia</a>
-          <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
-          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktuppgifter</a>
-          <a href="./Kontaktportal.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktportal</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161875" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Historia</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
         </div>
       </section>
     </div>
   </div>
 </div>
+
+
