--- a/frontend/simskola/avgifter.html
+++ b/frontend/simskola/avgifter.html
@@ -1,8 +1,8 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <div style="margin-bottom: 16px; font-size: 14px">
-            <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8; text-decoration:none; font-weight: 600">&#8592; Simskolan</a>
+            <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8; text-decoration:none; font-weight: 600" target="_blank" rel="noopener noreferrer">&#8592; Simskolan</a>
           </div>
 
           <div style="background: rgba(255,255,255,0.85); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 36px 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
@@ -18,7 +18,7 @@
             </div>
 
             <div style="margin-bottom: 0">
-              <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #2e7d32 0%, #1b5e20 100%); color: #ffffff; padding:13px 24px; border-radius:6px; text-decoration: none; font-weight: 700; font-size:15px; min-height:44px; box-shadow: 0 4px 16px rgba(46,125,50,0.3);">Boka simskola &#8594;</a>
+              <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #2e7d32 0%, #1b5e20 100%); color: #ffffff; padding:13px 24px; border-radius:6px; text-decoration: none; font-weight: 700; font-size:15px; min-height:44px; box-shadow: 0 4px 16px rgba(46,125,50,0.3);" target="_blank" rel="noopener noreferrer">Boka simskola &#8594;</a>
             </div>
           </div>
 
@@ -52,25 +52,25 @@
                 <tbody>
                   <tr style="background: #ffffff">
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; line-height: 1.6">
-                      <a href="https://www.ljungbyss.se/sida/?ID=161878" style="text-decoration:none; color:#0077c8; font-weight: 500">Minisim</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161879" style="text-decoration:none; color:#0077c8; font-weight: 500">Baddaren</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161880" style="text-decoration:none; color:#0077c8; font-weight: 500">Sköldpaddan</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161881" style="text-decoration:none; color:#0077c8; font-weight: 500">Bläckfisken</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161882" style="text-decoration:none; color:#0077c8; font-weight: 500">Pingvinen</a>
+                      <a href="https://www.ljungbyss.se/sida/?ID=161878" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Minisim</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161879" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Baddaren</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161880" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Sköldpaddan</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161881" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Bläckfisken</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161882" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Pingvinen</a>
                     </td>
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; text-align: right; font-weight: 700; color: #1a1a1a; font-size: 15px">950 kr</td>
                   </tr>
                   <tr style="background: #f5fafd">
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; line-height: 1.6">
-                      <a href="https://www.ljungbyss.se/sida/?ID=161883" style="text-decoration:none; color:#0077c8; font-weight: 500">Fisken steg 1</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161884" style="text-decoration:none; color:#0077c8; font-weight: 500">Fisken steg 2</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161885" style="text-decoration:none; color:#0077c8; font-weight: 500">Hajen</a>
+                      <a href="https://www.ljungbyss.se/sida/?ID=161883" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Fisken steg 1</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161884" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Fisken steg 2</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161885" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Hajen</a>
                     </td>
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; text-align: right; font-weight: 700; color: #1a1a1a; font-size: 15px">1 000 kr</td>
                   </tr>
                   <tr style="background: #ffffff">
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; line-height: 1.6">
-                      <a href="https://www.ljungbyss.se/sida/?ID=161888" style="text-decoration:none; color:#0077c8; font-weight: 500">Hammarhajen</a>
+                      <a href="https://www.ljungbyss.se/sida/?ID=161888" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Hammarhajen</a>
                     </td>
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; text-align: right; font-weight: 700; color: #1a1a1a; font-size: 15px">800 kr</td>
                   </tr>
@@ -83,7 +83,7 @@
             </div>
             
             <p style="margin: 16px 0 0 0; line-height: 1.6; color: #5a7a94; font-size: 13px">
-              Osäker på nivå? Se <a href="https://www.ljungbyss.se/sida/?ID=161877" style="text-decoration:none; color:#0077c8; font-weight: 600">Simskolegrupper</a> för beskrivning av varje grupp.
+              Osäker på nivå? Se <a href="https://www.ljungbyss.se/sida/?ID=161877" style="text-decoration:none; color:#0077c8; font-weight: 600" target="_blank" rel="noopener noreferrer">Simskolegrupper</a> för beskrivning av varje grupp.
             </p>
           </div>
 
@@ -93,11 +93,11 @@
             <div style="display: flex; flex-wrap: wrap; gap: 20px">
               <div style="flex: 1 1 220px; min-width: 200px; background: linear-gradient(135deg, rgba(0,119,200,0.05) 0%, rgba(0,119,200,0.02) 100%); border-radius: 12px; padding: 16px; border: 1px solid rgba(0,119,200,0.1);">
                 <p style="margin: 0 0 4px 0; font-weight: 600; color: #1a1a1a">Armband</p>
-                <p style="margin: 0; line-height: 1.5; color: #5a7a94; font-size: 13px">60 kr/termin – för grindpassage och skåp</p>
+                <p style="margin: 0; line-height: 1.5; color: #5a7a94; font-size: 13px">60 kr/termin - för grindpassage och skåp</p>
               </div>
               <div style="flex: 1 1 220px; min-width: 200px; background: linear-gradient(135deg, rgba(76,175,80,0.05) 0%, rgba(76,175,80,0.02) 100%); border-radius: 12px; padding: 16px; border: 1px solid rgba(76,175,80,0.1);">
                 <p style="margin: 0 0 4px 0; font-weight: 600; color: #1a1a1a">Fritidskortet</p>
-                <p style="margin: 0; line-height: 1.5; color: #5a7a94; font-size: 13px">Statligt stöd för barn 7–16 år &#183; <a href="https://www.ljungbyss.se/sida/?ID=580304" style="text-decoration:none; color:#0077c8; font-weight: 600">Läs mer</a></p>
+                <p style="margin: 0; line-height: 1.5; color: #5a7a94; font-size: 13px">Statligt stöd för barn 7-16 år &#183; <a href="https://www.ljungbyss.se/sida/?ID=580304" style="text-decoration:none; color:#0077c8; font-weight: 600" target="_blank" rel="noopener noreferrer">Läs mer</a></p>
               </div>
             </div>
           </div>
@@ -123,10 +123,13 @@
           </section>
 
           <p style="margin: 0; line-height: 1.6; text-align: center; color: #5a7a94; font-size: 14px">
-            Mer om simning: <a href="https://www.ljungbyss.se/sida/?ID=179936" style="text-decoration:none; color:#0077c8; font-weight: 600">Simmärken</a>
+            Mer om simning: <a href="https://www.ljungbyss.se/sida/?ID=179936" style="text-decoration:none; color:#0077c8; font-weight: 600" target="_blank" rel="noopener noreferrer">Simmärken</a>
           </p>
     </div>
   </div>
 </div>
+
+
+
 
 
