--- a/frontend/simskola/simskolegrupper/fisken-steg-1.html
+++ b/frontend/simskola/simskolegrupper/fisken-steg-1.html
@@ -1,6 +1,6 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <div style="margin-bottom: 24px; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 32px rgba(0,90,153,0.15);">
             <img src="https://ljungbyss.web.sportadmin.se/images/253/16920/29C39761-BD6E-4F17-96CC-3A2C55055443_1721444.JPG" alt="Simskolegruppen Fisken Steg 1" style="width: 100%; height: auto; display: block;">
           </div>
@@ -18,7 +18,7 @@
             </div>
             
             <p style="font-size: 15px; line-height: 1.7; color: #3a5a70; margin: 0 0 12px 0; max-width: 65ch;">
-              Fisken Steg 1 är nästa steg i vår simskola. Här arbetar vi vidare med teknik och uthållighet för barn som kan simma cirka 10–15 meter.
+              Fisken Steg 1 är nästa steg i vår simskola. Här arbetar vi vidare med teknik och uthållighet för barn som kan simma cirka 10-15 meter.
             </p>
             <p style="font-size: 15px; line-height: 1.7; color: #3a5a70; margin: 0; max-width: 65ch;">
               Vi tränar på att bygga upp orken för att kunna simma cirka 25 meter på mage och 25 meter på rygg. Vi tränar också på att dyka från upphöjd kant vid startpallen.
@@ -30,8 +30,8 @@
             <div style="flex: 1 1 calc(50% - 10px); min-width: 260px; background: linear-gradient(135deg, rgba(33,150,243,0.1) 0%, rgba(33,150,243,0.05) 100%); border-radius: 16px; border: 1px solid rgba(33,150,243,0.2); padding: 24px; box-shadow: 0 8px 32px rgba(33,150,243,0.08);">
               <h3 style="margin: 0 0 12px 0; font-size: 17px; font-weight: 700; color: #005a99;">👶 För vem?</h3>
               <ul style="margin: 0; padding-left: 18px; font-size: 14px; line-height: 1.6; color: #4a6a7e; list-style-type: disc;">
-                <li>Barn som kan simma cirka 10–15 meter bröstsim på djupt vatten utan flythjälp.</li>
-                <li>Barn som kan simma cirka 10–15 meter ryggsim på djupt vatten med god teknik.</li>
+                <li>Barn som kan simma cirka 10-15 meter bröstsim på djupt vatten utan flythjälp.</li>
+                <li>Barn som kan simma cirka 10-15 meter ryggsim på djupt vatten med god teknik.</li>
                 <li>Barn som har tagit Pingvinen Silver och Pingvinen Guld.</li>
               </ul>
             </div>
@@ -39,11 +39,11 @@
             <div style="flex: 1 1 calc(50% - 10px); min-width: 260px; background: rgba(255,255,255,0.95); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 24px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
               <h3 style="margin: 0 0 12px 0; font-size: 17px; font-weight: 700; color: #005a99;">📝 Anmälan</h3>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-                Bokning sker i SportAdmin när anmälan är öppen. Se <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8; text-decoration:none; font-weight: 600;">Avgifter</a>.
+                Bokning sker i SportAdmin när anmälan är öppen. Se <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Avgifter</a>.
               </p>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">Lektionstid: cirka 60 minuter (varav cirka 50 minuter i vattnet).</p>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">Bra att veta: Kom ombytt i tid, duscha före lektion och meddela längre frånvaro till kansliet.</p>
-              <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);">
+              <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
                 Boka Fisken Steg 1
               </a>
             </div>
@@ -65,21 +65,20 @@
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
             <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🏅 Märken</h2>
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-              I Fisken Steg 1 jobbar vi mot simmärket Fisken 1. Se sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;">Simmärken</a>.
+              I Fisken Steg 1 jobbar vi mot simmärket Fisken 1. Se sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Simmärken</a>.
             </p>
           </div>
 
           <div style="display: flex; justify-content: space-between; padding-top: 20px;">
-            <a href="https://www.ljungbyss.se/sida/?ID=161882" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px">
+            <a href="https://www.ljungbyss.se/sida/?ID=161882" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" target="_blank" rel="noopener noreferrer">
               ← Pingvinen
             </a>
-            <a href="https://www.ljungbyss.se/sida/?ID=161884" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px">
+            <a href="https://www.ljungbyss.se/sida/?ID=161884" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" target="_blank" rel="noopener noreferrer">
               Fisken Steg 2 →
             </a>
           </div>
     </div>
   </div>
 </div>
-
 
 
