--- a/frontend/simskola/simskolegrupper/hammarhajen.html
+++ b/frontend/simskola/simskolegrupper/hammarhajen.html
@@ -1,6 +1,6 @@
 ﻿<div style="margin:0;background:#f3f7fb;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#1a1a1a;">
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
-    <div style="max-width:895px;margin:0 auto;">
+    <div style="max-width:850px;margin:0 auto;">
       <div style="margin-bottom: 24px; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 32px rgba(0,90,153,0.15);">
             <img src="https://ljungbyss.web.sportadmin.se/images/253/16920/A97C8C94-7F32-4CB6-AA4E-44F82FAABCB5_1749463.PNG" alt="Simskolegruppen Hammarhajen" style="width: 100%; height: auto; display: block;">
           </div>
@@ -39,12 +39,12 @@
             <div style="flex: 1 1 calc(50% - 10px); min-width: 260px; background: rgba(255,255,255,0.95); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 24px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
               <h3 style="margin: 0 0 12px 0; font-size: 17px; font-weight: 700; color: #005a99;">📝 Anmälan</h3>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-                Kontakta oss för diskussion om plats i Hammarhajen. Se <a href="https://www.ljungbyss.se/start/?ID=460051" style="color:#0077c8; text-decoration:none; font-weight: 600;">Kontakt</a>.
+                Kontakta oss för diskussion om plats i Hammarhajen. Se <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Kontakt</a>.
               </p>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
                 Hör gärna av dig innan bokningen öppnar om ditt barn behöver särskilt stöd eller anpassningar.
               </p>
-              <a href="https://www.ljungbyss.se/start/?ID=460051" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);">
+              <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
                 Kontakta oss
               </a>
             </div>
@@ -66,16 +66,15 @@
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
             <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🏅 Märken</h2>
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-              I Hammarhajen arbetar vi individanpassat och tar märken efter varje barns förmåga. Se sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;">Simmärken</a>.
+              I Hammarhajen arbetar vi individanpassat och tar märken efter varje barns förmåga. Se sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Simmärken</a>.
             </p>
           </div>
 
           <div style="display: flex; justify-content: flex-start; padding-top: 20px;">
-            <a href="https://www.ljungbyss.se/sida/?ID=161885" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px">
+            <a href="https://www.ljungbyss.se/sida/?ID=161885" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" target="_blank" rel="noopener noreferrer">
               ← Hajen
             </a>
           </div>
     </div>
   </div>
 </div>
-
